@@ -14,6 +14,7 @@ ver 0.14.2 (2009/??/??)
   - shout: fixed memory leak in the mp3 encoder
   - shout: switch to blocking mode
   - shout: use libshout's synchronization
+  - shout: don't postpone metadata
 * mapper: remove trailing slashes from music_directory
 * player: set player error when output device fails
 
